<resources>
    <string name="app_name">Pegel Alarm</string>
    <string name="content_provider_authority">de.bitdroid.flooding.provider</string>
	<string name="nav_home">News</string>
	<string name="nav_alarms">Alarms</string>
	<string name="nav_analysis">Water levels</string>
	<string name="nav_settings">Settings</string>
	<string name="nav_open">Open</string>
	<string name="nav_close">Close</string>
    <string name="title_new_alarm">New Alarm</string>
	<string name="map_dialog_station_info">Latitude %1$f\nLongitude %2$f</string>
	<string name="menu_graph_select_series">Series</string>
	<string name="menu_graph_normalize">Normalized plot</string>
	<string name="menu_graph_regular">Regular plot</string>
	<string name="menu_graph_timestamp">Timestamps</string>
	<string name="menu_graph_seekbar">Timestamps</string>
	<string name="menu_graph_map">Map</string>
	<string name="graph_rangelabel_cm">Water Level (cm)</string>
	<string formatted="false" name="graph_rangelabel_pc">Water Level (%)</string>
	<string name="graph_domainlabel">Location along River (km)</string>
	<string name="menu_search">Search</string>
    <string name="search_empty">No results</string>
    <string name="menu_select_water_search_hint">Rivers</string>
    <string name="menu_select_station_search_hint">Stations</string>
    <string name="menu_map">Map</string>
	<string name="menu_alarms_add">Add alarm</string>
	<string name="alarms_empty">No alarms started.</string>
	<string name="alarms_description_above">When level above %1$.2f cm</string>
	<string name="alarms_description_below">When level below %1$.2f cm</string>
	<string name="alarms_new_add">Start alarm</string>
	<string name="alarms_new_station_description">Station</string>
	<string name="alarms_new_level_description">Water level in cm</string>
	<string name="alarms_new_level_hint">Water level</string>
	<string name="alarms_new_trigger_description">Alarm when water is</string>
	<string name="alarms_new_trigger_above">above level</string>
	<string name="alarms_new_trigger_below">below level</string>
	<string name="alarms_new_title_river">Select river</string>
	<string name="alarms_new_title_station">Select station</string>
	<string name="alarms_new_title_level">Select water level</string>
	<string name="alarms_new_created">Added new alarm</string>
	<string name="alarms_new_not_created">Not added</string>
	<string name="alarms_new_already_added">Already added!</string>
    <string name="alarms_new_menu_data">Station data</string>
	<string name="alarms_registration_pending">Starting alarm ...</string>
	<string name="alarms_registration_error">Error starting alarm, tap to retry.</string>
	<string name="alarms_triggered_title">%1$s alarm triggered!</string>
	<string name="alarms_triggered_msg">%1$s is %2$s %3$.2f cm</string>
    <string name="alarms_triggered_msg_above">above level</string>
    <string name="alarms_triggered_msg_below">below level</string>
    <string name="invalid_graph_title">Ooops</string>
    <string name="invalid_graph_msg">Sorry, but there are not enough stations along this river to
    show the graph.</string>
	<string name="series_select_dialog_title">Select Series</string>
	<string name="series_monitor_dialog_title">Select a Timestamp</string>
	<string name="series_water_levels">Water Levels</string>
	<string name="series_water_levels_normalized">Normalized Water Levels</string>
	<string name="series_mw">MW</string>
	<string name="series_mhw">MHW</string>
	<string name="series_mnw">MNW</string>
	<string name="series_mthw">MThw</string>
	<string name="series_mtnw">MTnw</string>
	<string name="series_hthw">HThw</string>
	<string name="series_ntnw">NTnw</string>
	<string name="btn_ok">Ok</string>
	<string name="btn_cancel">Cancel</string>
	<string name="help">Help</string>
	<string name="delete">Delete</string>
	<string name="select_all">Select all</string>
	<string name="never">never</string>
    <string name="share">Share</string>
    <string name="share_with">Share with</string>
	<string name="prefs_cat_ods_monitor">Monitoring</string>
	<string name="prefs_cat_ods_monitor_key">cat_ods_monitoring</string>
    <string name="prefs_cat_advanced">Advanced</string>
    <string name="prefs_cat_advanced_key">cat_advanced</string>
    <string name="prefs_cat_about">About</string>
    <string name="prefs_cat_about_key">cat_advanced</string>
	<string name="prefs_ods_servername">ODS Servername</string>
	<string name="prefs_ods_servername_key">ods_server_name</string>
	<string name="prefs_ods_servername_default">http://faui2o2f.cs.fau.de:8080/open-data-service</string>
	<string name="prefs_ods_monitor">Record water levels</string>
	<string name="prefs_ods_monitor_key">monitor</string>
    <string name="prefs_ods_monitor_days">Monitoring period</string>
    <string name="prefs_ods_monitor_days_key">monitor_duration</string>
    <string name="prefs_ods_monitor_days_default">7</string>
    <string name="prefs_ods_monitor_days_format">%1$s days</string>
    <string name="prefs_ods_monitor_interval">Time between recordings</string>
    <string name="prefs_ods_monitor_interval_key">monitor_interval</string>
    <string name="prefs_ods_monitor_interval_default">0.5</string>
    <string name="prefs_ods_monitor_interval_format">%1$s hours</string>
    <string name="prefs_ods_monitor_wifi">Wifi only recording</string>
    <string name="prefs_ods_monitor_wifi_key">wifi_only</string>
	<string name="prefs_ods_sync_last">Last recording</string>
	<string name="prefs_ods_sync_last_key">last_sync</string>
	<string name="prefs_ods_sync_last_success">Last successful recording</string>
	<string name="prefs_ods_sync_last_success_key">last_successful_sync</string>
	<string name="prefs_ods_sync_last_fail">Last failed recording</string>
	<string name="prefs_ods_sync_last_fail_key">last_failed_sync</string>
	<string name="prefs_ceps_servername">CEPS Servername</string>
	<string name="prefs_ceps_servername_key">ceps_server_name</string>
	<string name="prefs_ceps_servername_default">http://faui2o2f.cs.fau.de:8080/cep-service</string>
    <string name="prefs_about_version">Version</string>
    <string name="prefs_about_version_key">version</string>
    <string name="prefs_about_feedback">Feedback</string>
    <string name="prefs_about_feedback_key">feedback</string>
    <string name="prefs_about_feedback_summary">Change requests, thoughts, criticism, praise</string>
    <string name="prefs_about_contribute">Contribute</string>
    <string name="prefs_about_contribute_key">contribute</string>
    <string name="prefs_about_contribute_summary">It\'s open source!</string>
    <string name="prefs_about_changelog">Changelog</string>
    <string name="prefs_about_changelog_key">changelog</string>
    <string name="prefs_about_legal">Legal</string>
    <string name="prefs_about_legal_key">legal</string>
	<string name="news_empty">Nothing new.</string>
	<string name="news_intro_alarms_title">Alarms</string>
    <string name="news_intro_alarms_content">Want alarms when water levels reach a certain level? &lt;b&gt;Click here!&lt;/b&gt;</string>
	<string name="news_intro_data_title">Water levels</string>
	<string name="news_intro_data_content">Want more details about the current water situation? &lt;b&gt;Click here!&lt;/b&gt;</string>
    <string name="news_intro_recording_title">Level Recording</string>
    <string name="news_intro_recording_content">Interested in recording water levels over a longer period of time?
        &lt;b&gt;Enable&lt;/b&gt; recordings in settings!</string>
	<string name="data_empty">No data found. Loading might take a little while when first starting the app.</string>
    <string name="data_empty_loading">Loading ...</string>
	<string name="data_station_count">%1$d stations</string>
	<string name="data_station_all">All stations</string>
    <string name="station_menu_graph">River graph</string>
    <string name="station_menu_alarm">Create alarm</string>
    <string name="station_card_level_title">Measurement</string>
    <string name="station_card_level_from">Timestamp</string>
    <string name="station_card_info_title">General Information</string>
    <string name="station_card_info_station">Station</string>
    <string name="station_card_info_water">Water</string>
    <string name="station_card_info_river_km">River Km</string>
    <string name="station_card_info_coordinates">Coordinates</string>
    <string name="station_card_info_zero_height">Zero height</string>
    <string name="station_card_char_title">Characteristic Values</string>
    <string name="station_card_char_mhw">Average high water level (MHW)</string>
    <string name="station_card_char_mw">Average water level (MW)</string>
    <string name="station_card_char_mnw">Average lower water level (MNW)</string>
    <string name="station_card_char_mthw">Average tide high water level (MThw)</string>
    <string name="station_card_char_mtnw">Average tide low water level (MTnw)</string>
    <string name="station_card_char_hthw">Highest tide high water level (HThw)</string>
    <string name="station_card_char_ntnw">Lowest tide low water level (NTnw)</string>
    <string name="station_card_more">Show station info ...</string>
	<string name="error_invalid_server_url">Invalid server URL!</string>
    <string name="error_play_services_missing_title">Google Play Services missing</string>
    <string name="error_play_services_missing_msg">Sorry, this action requires the Google Play Services to be installed on your device.</string>
    <string name="help_graph">
        The graph shows all &lt;b&gt;water levels&lt;/b&gt; (y-axis) along a &lt;b&gt;river&lt;/b&gt; (x-axis).
    </string>
    <string name="help_graph_series">
        The series displayed in the graph are (by color):
    </string>
    <string name="help_graph_series_water">
        The current &lt;b&gt;water level&lt;/b&gt;. By default this value is relative to a zero point.
    </string>
    <string name="help_graph_series_mw">
        The &lt;b&gt;average low, medium and high water levels&lt;/b&gt; (MNW, MW, MHW) measured over a period of time.
    </string>
    <string name="help_graph_series_average_tw">
        The &lt;b&gt;average low tide and average high tide water levels &lt;/b&gt; (MTnw, MThw) measured over a period of time.
    </string>
    <string name="help_graph_series_extreme_tw">
        The &lt;b&gt;lowest and highest tide water levels &lt;/b&gt; (NTnw, HThw) measured over a period of time.
    </string>
    <string name="help_graph_action">
        The available actions are:
    </string>
    <string name="help_graph_action_timestamps">
        If monitoring water levels is enabled in settings, you will be able to select a
        &lt;b&gt;timestamp&lt;/b&gt; here to display in the graph. Generally it takes a couple of
        hours before you can see multiple timestamps.
    </string>
    <string name="help_graph_action_normalize">
        The regular graph shows absolute water levels, which is not ideal for analysing data.
        &lt;b&gt;Normalizing&lt;/b&gt; the graph will display the current levels in relation to
        their average max and min values, effectively treating the distance (max - min) as 100%.
    </string>
    <string name="help_graph_action_map">
        Display &lt;b&gt;station locations&lt;/b&gt; on a map. Click a station for more information.
    </string>
    <string name="feedback_mail_chooser">Thanks for the feedback!</string>
    <string name="feedback_mail_address">philipp.eichhorn@bitdroid.de</string>
    <string name="feedback_mail_subject">%1$s feedback (v%2$s)</string>
    <string name="contribute_title">%1$s is open source!</string>
</resources>