<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
	<item
		android:id="@+id/menu_normalize"
		android:title="@string/menu_graph_normalize"
        android:icon="@drawable/ic_action_normalize_light"
        app:showAsAction="ifRoom"
	/>
    <item
        android:id="@+id/menu_map"
        app:showAsAction="ifRoom"
        android:title="@string/menu_graph_map"
        android:hint="@string/menu_graph_map"
        android:icon="@drawable/ic_action_map_light"
    />
	<item
		android:id="@+id/menu_series"
		android:title="@string/menu_graph_select_series"
	/>
	<item
		android:id="@+id/menu_help"
		android:title="@string/help"
		android:hint="@string/help"
		android:icon="@drawable/ic_action_help"
	/>
</menu>
