<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_metadata"
    style="@style/CardBackground"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/card_padding"
        >

        <TextView
            style="@style/StationCard.Title"
            android:text="@string/station_card_info_title"
            />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    style="@style/StationCard.Row.Left"
                    android:text="@string/station_card_info_station"
                    />

                <TextView
                    android:id="@+id/station"
                    style="@style/StationCard.Row.Right"
                    />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/StationCard.Row.Left"
                    android:text="@string/station_card_info_water"
                    />

                <TextView
                    android:id="@+id/water"
                    style="@style/StationCard.Row.Right"
                    />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/StationCard.Row.Left"
                    android:text="@string/station_card_info_river_km"
                    />

                <TextView
                    android:id="@+id/riverKm"
                    style="@style/StationCard.Row.Right"
                    />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/StationCard.Row.Left"
                    android:text="@string/station_card_info_coordinates"
                    />

                <TextView
                    android:id="@+id/coordinates"
                    style="@style/StationCard.Row.Right"
                    />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/StationCard.Row.Left"
                    android:text="@string/station_card_info_zero_height"
                    />

                <TextView
                    android:id="@+id/zero"
                    style="@style/StationCard.Row.Right"
                    />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
